# nlp-specialization

./: .gitignore  CHANGELOG.md  pyproject.toml
src/nlp_specialization/week_01/: sentiment_analysis_logistic_regression.ipynb
