[tool.isort]
profile = "black"

[tool.semantic_release]
version_variable = [
    "src/nlp_specialization/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = false
upload_to_release = true
build_command = "pip install poetry && poetry build"

[tool.poetry]
name = "NLP Specialization"
version = "0.2.0"
description = "Resolution of assignments for NLP Specialization (DeepLearning.AI)"
authors = ["Rafael Augusto de Oliveira <olirafa@protonmail.com>"]
license = "The Unlicense"

[tool.poetry.dependencies]
python = "^3.7.1"
pandas = "^1.2.3"
numpy = "^1.20.2"
scikit-learn = "^0.24.1"
spacy = "^3.0.5"
en-core-web-lg = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_lg-3.0.0/en_core_web_lg-3.0.0.tar.gz"}
nltk = "^3.6.1"

[tool.poetry.dev-dependencies]
commitizen = "^2.17.2"
isort = "^5.8.0"
black = "^20.8b1"
pylama = "^7.7.1"
pytest = "^6.2.3"
python-semantic-release = "^7.15.3"
jupyter = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
